k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vern
  labels:
    app: vern
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vern
  template:
    metadata:
      labels:
        app: vern
    spec:
      containers:
        - name: vern
          image: dta32/vern:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
