k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vern-service
spec:
  selector:
    app: vern
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
