k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vern-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: vern.dta32.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vern-service
                port:
                  number: 80
